# Ouroboros

./: .dockerignore  .env.dist  .gitignore  .mise.toml  .travis.yml  Dockerfile  Dockerfile.dev  Dockerfile.old  Dockerfile.test  HackerProfile.py  Procfile  README.md  cloudbuild.deploy.yaml  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  dump.rdb  kubernetes.yaml.tpl  lefthook.yml  main.yaml  manage.py  migrate.py  models_Dev_shetty.py  ouroboros.staging.yaml  ouroboros.yaml.tpl  prod.yml  pyproject.toml  reploy.yml  requirements.txt  routes.conf  setup.bash  tamuhack-prod.id_rsa.enc  tamuhack.staging.id_rsa.enc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  inaccurate-documentation.md  qa-path.md
.github/workflows/: black.yml  deploy.workflow  deploy.yml  django-tests.yml  djangotests.yml  gcr.yml  quality.yml  staging.yml  test.yml  unit-tests.yml
confirm/: apps.py  forms.py  tests.py  views.py
core/: context_processors.py  forms.py  views.py
customauth/: apps.py  forms.py  tests.py  urls.py  views.py
deadlines/: admin.py  apps.py  models.py  tests.py
deployment/: cloudbuild.deploy.yaml  ouroboros.yaml.tpl  tamuhack-prod.id_rsa.enc
docs/: emails.md
hacker/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hacker/migrations/: 0001_initial.py  0001_myfirstmigration.py  0002_auto_20181020_2111.py  0002_auto_20181020_2244.py  0002_auto_20190509_1934.py  0003_auto_20190510_2119.py  0003_confirmation_dietary_restrictions.py  0004_auto_20181021_0125.py  0004_auto_20190510_2321.py  0005_auto_20181021_2045.py
hacker/static/: style.css
hacker/templates/: application.html  base.html  dashboard.html  dashboard_base.html  index.html  information.html  login.html  rsvp.html  sign_up.html  status.html
hacker/templates/includes/: _dashboardNavbar.html  _logoBar.html  particles.html
hacker/tests/: __init__.py  form_tests.py  model_tests.py  view_tests.py
hacker/tests/model_tests/: __init__.py  rsvp_tests.py
hacker/tests/view_tests/: __init__.py  application_tests.py  rsvp_tests.py  status_tests.py
hacker_registration/: apps.py  urls.py
hacker_registration/static/: style.css
hacker_registration/templates/: base.html  index.html  sign_up.html
hacker_registration/templates/includes/: _navbar.html
hiss/: .coveragerc  .pylintrc  Procfile  create_application_application.sql  get-pip.py  manage.py  pyproject.toml  requirements.txt
hiss/application/: admin.py  apple_wallet.py  apps.py  constants.py  countries.py  emails.py  filesize_validation.py  filetype_validation.py  forms.py  meal_groups.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
hiss/application/fixtures/: Untitled.ipynb  dietary_restrictions.json  schools.json
hiss/application/migrations/: 0001_initial.py  0002_auto_20190915_0149.py  0002_auto_20190922_1658.py  0002_auto_20190922_1851.py  0002_auto_20190926_0205.py  0002_auto_20190928_2203.py  0002_auto_20190929_2010.py  0002_auto_20190929_2129.py  0002_auto_20190929_2153.py  0002_auto_20190930_2002.py  0002_auto_20190930_2005.py  0002_auto_20190930_2010.py  0002_auto_20190930_2029.py  0002_auto_20191002_1314.py  0002_auto_20191008_2338.py  0002_auto_20191028_1746.py  0002_auto_20191028_1902.py  0002_auto_20191028_2141.py  0002_auto_20191029_1816.py  0002_auto_20191105_1911.py  0002_auto_20200217_1026.py  0002_auto_20200217_1226.py  0002_auto_20200623_1630.py  0002_auto_20200630_1139.py  0003_application_industries_other.py  0003_application_school_other.py  0003_auto_20190922_1639.py  0003_auto_20190925_1735.py  0003_auto_20191018_2059.py  0003_auto_20191031_1349.py  0003_auto_20200211_1629.py  0003_remove_application_walk_in.py  (+101 more)
hiss/auth/: urls.py  views.py
hiss/customauth/: apps.py  forms.py  remote_backend.py  remote_header_middleware.py  tokens.py  urls.py  views.py
hiss/hiss/: celery.py  settings.py  urls.py  wsgi.py
hiss/judgesmentors/: apps.py  csv_email_admin.py  models.py
hiss/myenv/: pyvenv.cfg
hiss/rsvp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hiss/shared/: admin_functions.py  apps.py  context_processors.py  forms.py  mixins.py  seed.py  test_case.py  views.py
hiss/shared2/: seed.py
hiss/static/: admin.css  check_inbox.css  custom.css  favicon.ico:Zone.Identifier  hh25invite.ics  main.js  style.css  th25invite.ics  th26invite.ics
hiss/status/: apps.py  urls.py  views.py
hiss/team/: .views.py.swp  admin.py  apps.py  forms.py  models.py  urls.py  views.py
hiss/templates/: 400.html  403.html  404.html  500.html  base.html  dashboard_base.html
hiss/user/: admin.py  forms.py  models.py  tests.py
hiss/volunteer/: README.md  admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
hiss/wave/: apps.py  models.py
ouroboros/: context_processors.py  generate_fake_data.py  manage.py  settings.py  urls.py
ouroboros/api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
ouroboros/customauth/: forms.py  tests.py  urls.py  views.py
ouroboros/hacker/: admin.py  forms.py  models.py  urls.py  views.py
ouroboros/include/: python3.7m
ouroboros/ouroboros/: context_processors.py  urls.py  wsgi.py
ouroboros/settings/: base.py  customization.py  dev.py  prod.py
ouroboros/shared/: test.py
ouroboros/static/: check_email.css  email-styling.css  errorstyle.css  style.css
ouroboros/templates/: 404.html  base.html  error.html
ouroboros/volunteer/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
static/: _background_gradiant.html  background_color_css.css  style.css
templates/: base.html  index.html  status.html
templates/dashboard/: application.html  information.html  status.html
templates/emails/: activate_email.html
templates/hacker/: application.html  application_form.html  status.html
templates/includes/: _dashboardNavbar.html  _formhelpers.html  _logoBar.html  _navbar.html
templates/registration/: apply.html  confirm_email.html  login.html  password_reset_complete.html  password_reset_done.html  password_reset_form.html  password_reset_subject.txt  signup.html
(+209 files in other folders)
