[project]
name = "hiss"
version = "0.1.0"
description = "open source hackathon registration system"
authors = [
    { name = "Gabriel Britain" },
    { name = "Cameron Brill", email = "tamuhack@cameronbrill.me" },
    { name = "Adil Rasiyani" },
]
requires-python = ">=3.12"
license = "GPL-3.0"
dependencies = [
    "babel>=2.17.0",
    "bcrypt>=4.2.1",
    "cachetools>=5.5.2",
    "certifi>=2025.1.31",
    "chardet>=5.2.0",
    "colorama>=0.4.6",
    "coverage>=7.6.12",
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-address>=0.2.8",
    "django-admin-list-filter-dropdown>=1.0.3",
    "django-admin-rangefilter>=0.13.2",
    "django-anymail>=12.0",
    "django-cors-headers>=4.7.0",
    "django-multiselectfield>=0.1.13",
    "django-phonenumber-field>=8.0.0",
    "django-s3-storage>=0.15.0",
    "django-storages>=1.14.5",
    "djangorestframework>=3.15.2",
    "entrypoints>=0.4",
    "google-api-core>=2.24.1",
    "google-auth>=2.38.0",
    "google-cloud-core>=2.4.2",
    "google-cloud-storage>=3.0.0",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.68.0",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "phonenumbers>=8.13.55",
    "protobuf>=5.29.3",
    "psycopg2-binary>=2.9.10",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pypng>=0.20220715.0",
    "pyqrcode>=1.2.1",
    "pytz>=2025.1",
    "qrtools>=0.0.2",
    "requests>=2.32.3",
    "rsa>=4.9",
    "six>=1.17.0",
    "sqlparse>=0.5.3",
    "tblib>=3.0.0",
    "urllib3>=2.3.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.autohooks]
mode = "poetry"
pre-commit = ["autohooks.plugins.black", "autohooks.plugins.pylint", "autohooks.plugins.isort"]

[tool.autohooks.plugins.pylint]
arguments = ["--exit-zero", "--rcfile=./hiss/.pylintrc"]

[tool.black]
exclude = '''
/(
   \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
  | \./*/migrations
  | env
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80
